# cvbench-system-runner

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  Makefile  PROJECT_SPEC_VERBATIM.md  README.md  pyproject.toml
benchmarks/: long-running-stability.yaml  motchallenge-v1.yaml  persistent-target-tracking.yaml  public-whole-system-v2.yaml  public-whole-system-v3.yaml  real-video-v1.yaml  real-video-v2.yaml  timing-compute-evidence.yaml
control-plane/: package-lock.json  package.json  wrangler.jsonc
docs/: CONTROL_PLANE_IMPLEMENTATION_PROMPT.md  MOTCHALLENGE_IMPLEMENTATION_PROMPT.md  MOTCHALLENGE_RESEARCH_REPORT.md  PR6_IMPLEMENTATION_PROMPT.md  PR7_IMPLEMENTATION_PROMPT.md  PR7_SCENARIO_PLAYBACK_IMPLEMENTATION_PROMPT.md  SCENARIO_CATALOG_IMPLEMENTATION_PROMPT.md  architecture.md  capability-matrix.md  control-plane.md  development.md  limitations.md  metrics.md  motchallenge-sources.md  operator-audit.md  protocol.md  real-video-baseline-results.html  real-video-baseline-results.json  real-video-baseline-results.md  real-video-sources.md  scenario-catalog.md  scenario-playback-evidence.json  timing-compute-contract.md
examples/: Dockerfile.good  Dockerfile.real-video-baseline  Dockerfile.real-video-prep  README.md
scenario-catalog/: baselines.json  metadata.yaml
schemas/: frame-v1.schema.json  ground-truth-v1.schema.json  report-redacted-v1.schema.json  report-v1.schema.json  timing-compute-v1.schema.json  track-v1.schema.json
scripts/: assert_docker_report.py  assert_pacing_evidence.py  audit_motchallenge.py  cvbench-operator.mjs  evidence_hashes.py  (+10 more)
(+195 files in other folders)
